Fix alignment in validation

--- a/src/stylesheets/components/_alerts.scss
+++ b/src/stylesheets/components/_alerts.scss
@@ -122,11 +122,6 @@ $alert-padding-left: units($theme-alert-bar-width);
 }
 
 .usa-alert--validation {
-  &:before {
-    background-position: 0 units(1);
-    mask-position: 0 units(1);
-  }
-
   .usa-checklist {
     margin-top: units(2);
   }
